added sprite sheet and loading subtextures

--- a/sfmlScripting/sfmlScripting/sfmlScripting.vcxproj
+++ b/sfmlScripting/sfmlScripting/sfmlScripting.vcxproj
@@ -158,12 +158,18 @@
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Hitbox.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Monster.cpp" />
+    <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Hitbox.h" />
     <ClInclude Include="Includes.h" />
+    <ClInclude Include="Monster.h" />
+    <ClInclude Include="Tile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
