--- a/sfmlScripting/sfmlScripting/sfmlScripting.vcxproj
+++ b/sfmlScripting/sfmlScripting/sfmlScripting.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Hitbox.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Tile.cpp" />
   </ItemGroup>
@@ -170,12 +171,12 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Hitbox.h" />
     <ClInclude Include="Includes.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="Tile.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="character.lua" />
-    <None Include="monster.lua" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Maps\map1.txt" />
