--- a/sfmlScripting/sfmlScripting/sfmlScripting.vcxproj
+++ b/sfmlScripting/sfmlScripting/sfmlScripting.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Hitbox.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Tile.cpp" />
   </ItemGroup>
@@ -171,6 +172,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Hitbox.h" />
     <ClInclude Include="Includes.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="Tile.h" />
   </ItemGroup>
